--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-string.data.mongodb.database
+spring.config.import=optional:file:.env[.properties]
+
+spring.data.mongodb.uri=mongodb://localhost:27017/demo_db
